--- a/mobApp/pv239-project/pv239-project.csproj
+++ b/mobApp/pv239-project/pv239-project.csproj
@@ -64,6 +64,7 @@
         <PackageReference Include="CommunityToolkit.Maui" Version="11.1.0" />
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.4" />
+        <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.9.0" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="9.0.40" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
     </ItemGroup>
