--- a/mobApp/pv239-project/pv239-project.csproj
+++ b/mobApp/pv239-project/pv239-project.csproj
@@ -63,6 +63,7 @@
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Maui" Version="11.1.0" />
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.4" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.4" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="9.0.40" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
