feat: Backend app settings

--- a/backend/ChatAppBackend/appsettings.json
+++ b/backend/ChatAppBackend/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "JwtSettings": {
+      "SigningKey": "M5,3c>u00a3vAz<XIVhfihJYY![*&r4xKL4b4Y>4)F",
+      "ExpiryInSeconds": 1800
+    }
+  }
 }
