--- a/mobApp/pv239-project/pv239-project.csproj
+++ b/mobApp/pv239-project/pv239-project.csproj
@@ -40,6 +40,7 @@
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
         <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
+        <NeutralLanguage>en</NeutralLanguage>
     </PropertyGroup>
 
     <ItemGroup>
@@ -81,6 +82,11 @@
         <DependentUpon>ConversationListPage.xaml</DependentUpon>
         <SubType>Code</SubType>
       </Compile>
+      <Compile Update="Resources\i18n\AppTexts.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>AppTexts.resx</DependentUpon>
+      </Compile>
     </ItemGroup>
 
     <ItemGroup>
@@ -93,6 +99,10 @@
 
     <ItemGroup>
         <EmbeddedResource Include="Configuration/appsettings.json" />
+        <EmbeddedResource Update="Resources\i18n\AppTexts.resx">
+          <Generator>ResXFileCodeGenerator</Generator>
+          <LastGenOutput>AppTexts.Designer.cs</LastGenOutput>
+        </EmbeddedResource>
     </ItemGroup>
 
 </Project>
