--- a/mobApp/pv239-project/Platforms/Android/AndroidManifest.xml
+++ b/mobApp/pv239-project/Platforms/Android/AndroidManifest.xml
@@ -14,4 +14,5 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 </manifest>
