--- a/mobApp/pv239_project.Client/pv239_project.Client.csproj
+++ b/mobApp/pv239_project.Client/pv239_project.Client.csproj
@@ -14,6 +14,7 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
+      <PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
     </ItemGroup>
 
 </Project>
