feat: app title changed

--- a/mobApp/pv239-project/pv239-project.csproj
+++ b/mobApp/pv239-project/pv239-project.csproj
@@ -22,7 +22,7 @@
         <LangVersion>preview</LangVersion>
 
         <!-- Display name -->
-        <ApplicationTitle>pv239-project</ApplicationTitle>
+        <ApplicationTitle>ChatApp</ApplicationTitle>
 
         <!-- App Identifier -->
         <ApplicationId>com.companyname.pv239project</ApplicationId>
