--- a/mobApp/pv239-project/Platforms/Android/AndroidManifest.xml
+++ b/mobApp/pv239-project/Platforms/Android/AndroidManifest.xml
@@ -3,6 +3,8 @@
     <application
             android:allowBackup="true"
             android:supportsRtl="true"
+            android:icon="@mipmap/appicon"
+            android:roundIcon="@mipmap/appicon_round"
             android:networkSecurityConfig="@xml/network_security_config"
             android:usesCleartextTraffic="true"
     >
